# duro

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
duro/: __init__.py  activities.py  durable_agent.py  serde.py  state_store.py  workflows.py
tests/: test_replay.py  test_serde.py  test_state_store.py
